feat: domain layer tests